src/test/resources/fdl/cocos/invalid/UnknownSpecQuantity.fdl
FDL UnknownSISpecQuantity {
  EQUATION m^^{.} = V^^{.} * @rho_{"s"}
  WITH:
    ALIASES:
      m^^{.} = "Massestrom";

    SPECIFICATIONS:
      V^^{.} = "bananas";
}